# sessiongator

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  native-import-compat.yml  release.yml
.homebrew/: sessiongator.rb
docs/specs/: ai-session-manager.md  codex-cli-native-import.md  copilot-cli-native-import.md  native-session-import-versions.toml  native-session-import.md
fixtures/native-import/claude/2.1.199/basic-text/expected-opencode/: plan-summary.json
fixtures/native-import/claude/2.1.199/basic-text/source/projects/-tmp-sessiongator-demo/: 11111111-2222-4333-8444-555555555555.jsonl
scripts/: probe-native-import-latest.sh  sessiongator.zsh  update-native-import-versions.mjs
src/: main.rs  model.rs  native_import.rs  search.rs  session.rs  ui.rs
src/sources/: claude.rs  codex.rs  copilot.rs  mod.rs  opencode.rs
